force-app/main/default/objects/Territory_Target__c/Territory_Target__c.object-meta.xml
<CustomObject>
    <label>Territory Target</label>
    <pluralLabel>Territory Targets</pluralLabel>
    <description>Territory Target</description>
    <nameField>
        <label>Territory Target Name</label>
        <type>AutoNumber</type>
        <displayFormat>TTG-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>