force-app/main/default/objects/Territory_Target__c/fields/Conversion_Target__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Target__c</fullName>
    <label>Conversion Target</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <description>Conversion Target</description>
</CustomField>