force-app/main/default/objects/Territory_Target__c/fields/Lead_Target__c.field-meta.xml
<CustomField>
    <fullName>Lead_Target__c</fullName>
    <label>Lead Target</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <description>Lead Target</description>
</CustomField>