force-app/main/default/objects/Territory_Target__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>MasterDetail</type>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Targets</relationshipLabel>
    <relationshipName>Targets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>Territory</description>
</CustomField>